tests/errors/test_40.x
// Unknown type

fn (x: Foo*) foo() -> void {
}

fn main() -> void {

    let y: (i64, What, i8*);

    let x: WHAT;

}